--- a/ejs/common/_footer.ejs
+++ b/ejs/common/_footer.ejs
@@ -19,3 +19,12 @@
 		</div>
 	</div>
 </footer>
+
+<ul class="block-note sp">
+	<li>
+		<a href="tel:16888343" class="block-note__tel c-ft--kh"><i class="fa-solid fa-phone"></i>1688-8343 <small> 연결</small></a>
+	</li>
+	<li>
+		<a href="<%= RELATIVE_PATH %>contact.html" class="block-note__mail"><i class="fa-solid fa-envelope"></i>상담방문 <small> 예약</small></a>
+	</li>
+</ul>
