--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -2,22 +2,35 @@
 	<section class="sec-mv">
 		<ul class="mv-slider js-mv-slider">
 			<li class="mv-slider__item">
-				<img src="<%= RELATIVE_PATH %>img/mv-img-01.jpg" alt="THE MARKONE">
+				<img src="<%= RELATIVE_PATH %>img/mv-img-01.jpg" alt="THE MARKONE" class="pc">
+				<img src="<%= RELATIVE_PATH %>img/mv-img-01-sp.jpg" alt="THE MARKONE" class="sp">
+				<div class="mv-heading">
+					<h1 class="mv-heading__ttl c-ft--kr">
+						<span>뉴타운</span>이 꿈꾸던<br>
+						<span>역대급</span> 프리미엄!
+					</h1>
+					<p>여의도부터 생활까지 앞서가는 초역세권 라이프!</p>
+					<a href="<%= RELATIVE_PATH %>contact.html" class="mv-heading__btn">
+						상담방문예약 >
+					</a>
+				</div>
 			</li>
 			<li class="mv-slider__item">
-				<img src="<%= RELATIVE_PATH %>img/mv-img-02.jpg" alt="THE MARKONE">
+				<img src="<%= RELATIVE_PATH %>img/mv-img-02.jpg" alt="THE MARKONE" class="pc">
+				<img src="<%= RELATIVE_PATH %>img/mv-img-02-sp.jpg" alt="THE MARKONE" class="sp">
+				<div class="mv-heading">
+					<h1 class="mv-heading__ttl c-ft--kr">
+						<span>뉴타운</span>이 꿈꾸던<br>
+						<span>역대급</span> 프리미엄!
+					</h1>
+					<p>- 여의대방 더 마크원</p>
+					<a href="<%= RELATIVE_PATH %>contact.html" class="mv-heading__btn">
+						상담방문예약 >
+					</a>
+				</div>
 			</li>
 		</ul>
-		<div class="mv-heading">
-			<h1 class="mv-heading__ttl c-ft--kr">
-				<span>뉴타운</span>이 꿈꾸던<br>
-				<span>역대급</span> 프리미엄!
-			</h1>
-			<p>여의도부터 생활까지 앞서가는 초역세권 라이프!</p>
-			<a href="<%= RELATIVE_PATH %>contact.html" class="mv-heading__btn">
-				상담방문예약 >
-			</a>
-		</div>
+
 		<a href="#about" class="scroll-dow js-scroll">
 			<i class="fa-solid fa-circle-down"></i>
 		</a>
@@ -56,8 +69,8 @@
 	</section>
 	<section class="sec-premium">
 		<div class="inner">
-			<h2 class="c-ttl__01">
-				PREMIUM 5
+			<h2 class="c-ttl__01 c-ft--kr-serit">
+				<span>PREMIUM 5</span>
 			</h2>
 			<ul class="premium-list c-ft--kr">
 				<li class="premium-list__item">
@@ -113,4 +126,30 @@
 			</ul>
 		</div>
 	</section>
+	<div class="popup-note">
+		<span class="popup-note__close"><i class="fa-solid fa-xmark"></i></span>
+		<div class="popup-note__logo">
+			<img src="<%= RELATIVE_PATH %>img/logo.png" alt="THE MARKONE">
+		</div>
+		<h3 class="popup-note__ttl c-ft--kr">
+			<span>여의도</span>를<span>눈앞</span>에!<br>
+			<span>역세권</span>을<span>집앞</span>에!
+		</h3>
+		<div class="popup-note__ct">
+			<h4 class="popup-note__ct-ttl c-ft--kr-serit">[ PREMIUM POINT ]</h4>
+			<ul>
+				<li>신림선 초역세권</li>
+				<li>42층 초고층 스카이마크</li>
+				<li>350m 스트리트형 상업시설</li>
+				<li>100m 초품아 단지</li>
+				<li>신길뉴타운 맨 앞자리</li>
+			</ul>
+		</div>
+		<p class="popup-note__ct-note">■ 총 1,228 세대 <small>(예정)</small> | 52㎡/ 59㎡/ 84㎡</p>
+		<p>사전 방문예약제 운영중! 미리 예약후 찾아주세요.</p>
+		<a href="" class="popup-note__btn c-ft--kr"><i class="fa-solid fa-check"></i>상담/방문예약 신청</a>
+		<div class="popup-note__tel">
+			홍보관 <strong>1688-8343</strong>
+		</div>
+	</div>
 </main>
