--- a/ejs/common/_header.ejs
+++ b/ejs/common/_header.ejs
@@ -6,7 +6,7 @@
 		<nav class="header-nav">
 			<ul class="header-nav__menu">
 				<li class="header-nav__menu-item">
-					<a href="">홈</a>
+					<a href="" class="<% if(pageData.template == 'index'){ %> active <% } %>">홈</a>
 				</li>
 				<li class="header-nav__menu-item">
 					<a href="">사업개요</a>
