--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -13,7 +13,10 @@
 
 .c-ft{
 	&--kr{
-		font-family: $font-noto !important;
+		font-family:$font-notoSan !important;
+	}
+	&--kr-serit{
+		font-family:$font-notoSerif !important;
 	}
 	&--kh{
 		font-family: $font-KoHo !important;
@@ -78,16 +81,29 @@ Component
 	&__01{
 		display: block;
 		text-align: center;
-		@include font-size(36);
+		@include font-size(40);
+		letter-spacing: 7px;
+		font-weight: bold;
 		line-height: 1.2;
 		color: #CEB3A4;
+		margin-bottom: 40px;
+		@include mq(){
+			@include font-size(30);
+			letter-spacing: 4px;
+		}
 		span{
 			display: inline-block;
 			position: relative;
+			padding: 0 20px 0 30px;
 			&:before,&:after{
 				position: absolute;
-				bottom: 0;
+				bottom: 6px;
 				content: "/";
+				@include font-size(25);
+				@include mq(){
+					@include font-size(18);
+					bottom: 3px;
+				}
 			}
 			&:before{
 				left: 0;
