--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -33,11 +33,17 @@
 	text-shadow: 0 0 5px #000000;
 	@include font-size(28);
 	color: white;
+	@include mq(){
+		@include font-size(14);
+	}
 	&__ttl{
 		color: white;
 		font-weight: bold;
 		@include font-size(66);
 		margin-bottom: 20px;
+		@include mq(){
+			@include font-size(34);
+		}
 		span{
 			color: #ffc107;
 		}
@@ -52,6 +58,9 @@
 		@include font-size(16);
 		padding: 7px 15px 5px;
 		border-radius: 4px;
+		@include mq(){
+			@include font-size(14);
+		}
 	}
 }
 
@@ -63,6 +72,10 @@
 	&__img{
 		width: 50%;
 		border: 7px solid #6E8F8E;
+		@include mq(){
+			width: 100%;
+			order: 2;
+		}
 		img{
 			width: 100%;
 		}
@@ -73,6 +86,16 @@
 		@include font-size(16);
 		line-height: 1.5;
 		text-align: center;
+		@include mq(){
+			width: 100%;
+			padding: 0 15px;
+			order: 1;
+			@include font-size(14);
+			margin-bottom: 30px;
+		}
+		@include mq(xs){
+			padding: 0;
+		}
 		&-note{
 			display: inline-block;
 			color: #AD9600;
@@ -81,6 +104,10 @@
 			position: relative;
 			padding: 0 0 15px;
 			margin-bottom: 30px;
+			@include mq(){
+				@include font-size(12);
+				letter-spacing: 5px;
+			}
 			&:after{
 				content: "";
 				width: 70px;
@@ -102,22 +129,44 @@
 			line-height: 1.4;
 			@include font-size(36);
 			margin-bottom: 25px;
+			@include mq(){
+				@include font-size(22);
+			}
 		}
 		&-list{
 			@include flex(0,0,wrap);
+			@include mq(){
+				@include font-size(16);
+			}
 			small{
 				@include font-size(12);
+				@include mq(){
+					@include font-size(10);
+				}
 			}
 			&--01{
 				background: #B98700;
 				padding: 15px 35px;
 				color: white;
 				margin-bottom: 30px;
+				@include mq(){
+					padding: 15px 20px;
+					margin-bottom: 15px;
+				}
 			}
 			&--02{
 				justify-content: center;
 				border: 3px solid #E0DDD0;
 				padding: 10px;
+				@include mq(){
+					@include font-size(14);
+					li{
+						margin-right: 10px !important;
+						&:before{
+							top: 4px !important;
+						}
+					}
+				}
 			}
 			li{
 				position: relative;
@@ -132,6 +181,10 @@
 					top: 4px;
 					left: 0;
 					@include font-size(14);
+					@include mq(){
+						@include font-size(12);
+						top: 5px;
+					}
 				}
 			}
 		}
@@ -160,10 +213,24 @@
 }
 
 .premium-list{
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	gap: 20px;
+	@include flex(0,0,wrap);
+	margin: 0 -10px;
+	@include mq(){
+		padding: 0 20px;
+	}
 	&__item{
+		width: 20%;
+		padding: 0 10px;
+		@include mq(lg){
+			width: 33.333%;
+			margin-bottom: 40px;
+		}
+		@include mq(sm){
+			width: 100%;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
 	}
 	&__name{
 		display: block;
@@ -198,5 +265,161 @@
 		line-height: 1.5;
 		color: #EDEDED;
 		padding: 0 5px;
+		@include mq(lg){
+			@include font-size(15);
+		}
+	}
+}
+
+.popup-note{
+	position: fixed;
+	top: 100px;
+	left: 30px;
+	max-width: 370px;
+	text-align: center;
+	padding: 20px;
+	background-color: #003D57;
+	box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.57);
+	color: white;
+	@include font-size(11);
+	line-height: 1.6;
+	z-index: 999;
+	@include smooth-transition;
+	@include mq(tb){
+		top: 70px;
+		left: 20px;
+		right: 20px;
+		margin: 0 auto;
+	}
+	&.hiiden{
+		opacity: 0;
+		visibility: visible;
+		z-index: -1;
+	}
+	&__close{
+		display: block;
+		@include font-size(30);
+		cursor: pointer;
+		position: absolute;
+		top: 0;
+		right: 10px;
+	}
+	&__logo{
+		display: block;
+		text-align: center;
+		margin-bottom: 10px;
+		img{
+			display: block;
+			width: 102px;
+			margin: 0 auto;
+		}
+	}
+	&__ttl{
+		display: block;
+		@include font-size(30);
+		line-height: 1.2;
+		color: #FBBBA0;
+		margin-bottom: 15px;
+		@include mq(){
+			@include font-size(24);
+		}
+		span{
+			font-weight: bold;
+			display: inline-block;
+			margin: 0 3px;
+		}
+	}
+	&__ct{
+		background: white;
+		border-radius: 10px;
+		padding: 15px 20px;
+		color: #0F3A4B;
+		margin-bottom: 10px;
+		&-note{
+			margin-bottom: 20px;
+			@include font-size(14);
+			@include mq(){
+				margin-bottom: 10px;
+			}
+			small{
+				@include font-size(10);
+			}
+		}
+		&-ttl{
+			display: block;
+			@include font-size(20);
+			color: #C63379;
+			letter-spacing: 3px;
+			font-weight: bold;
+			margin-bottom: 10px;
+			@include mq(){
+				@include font-size(18);
+				letter-spacing: 1px;
+				margin-bottom: 5px;
+			}
+		}
+		ul{
+			text-align: left;
+			@include font-size(16);
+			font-weight: 600;
+			@include mq(){
+				@include font-size(14);
+			}
+			li{
+
+				position: relative;
+				padding: 0 0 0 20px;
+				margin: 0 20px 0 0;
+
+				&:before{
+					content: "\f35a";
+					font-weight: bold;
+					font-family: "Font Awesome 6 Free";
+					color: #B21F65;
+					position: absolute;
+					top: 2px;
+					left: 0;
+					@include font-size(14);
+					@include mq(){
+						@include font-size(12);
+					}
+				}
+			}
+		}
+
+	}
+	p{
+		margin-bottom: 15px;
+		@include mq(){
+			margin-bottom: 10px;
+		}
+	}
+	&__btn{
+		display: inline-block;
+		background: white;
+		@include font-size(16);
+		font-weight: bold;
+		color: #333;
+		border-radius: 30px;
+		padding: 6px 15px;
+		margin-bottom: 10px;
+		i{
+			display: inline-block;
+			margin: 0 5px 0 0;
+		}
+	}
+	&__tel{
+		@include font-size(14);
+		strong{
+			display: inline-block;
+			margin: 0 0 0 10px;
+			@include font-size(30);
+			font-family: $font-notoSan;
+			position: relative;
+			top: 2px;
+			@include mq(){
+				@include font-size(28);
+			}
+		}
 	}
 }
